crates/tuna/tests/parser/fail/super-class-param-bin.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperClassParamBin = (
  ----

  / super = ('rip')
)
